add concurrent queue

--- a/map/avl/test/CMakeLists.txt
+++ b/map/avl/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-project(test-avl C)
+project(test-map-avl C)
 
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2 ")
 
-add_executable(test-avl test-avl.c)
-target_link_libraries(test-avl avl_tree)
+add_executable(test-map-avl test-avl.c)
+target_link_libraries(test-map-avl map-avl)
