--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(structure)
+project(structure C)
 
 set(CMAKE_C_STANDARD 11)
 
@@ -7,4 +7,6 @@ set(CMAKE_C_STANDARD 11)
 include_directories(common)
 
 add_subdirectory(map)
+add_subdirectory(set)
+add_subdirectory(concurrent)
 add_subdirectory(expression)
